--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,27 +1,161 @@
 .banner { 
-    background-color: rgb(187, 117, 5);
-   height: 50px;
-   padding: 10px;
-   display: flex;
-   justify-content: flex-end;
-   align-items: center;
-   /* text-align: end; */
-   font-size: 4rem;
-   
-
-
-}
-
-nav {
-
+    background-color: #F5AF00;
+    height: 70px;
+    width: 100%;
+    position: relative;
+    padding: 0.5rem 0rem;
     display: flex;
-    
+    align-items: center;
+    font-size: 3rem;
+    flex-wrap: wrap;
+    box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
 
 }
 
-.link {
+.brand-name {
     text-decoration: none;
-    /* padding: 10px; */
-    margin: 0 10px;
     color: white;
+    font-size: 3rem;
+    margin-left: 1rem;
+}
+
+.navigation-menu{
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+}
+
+.navigation-menu .link {
+    text-decoration: none;
+    margin: 0 1rem;
+    color: white;
+    font-size: 1.9rem;
+    width: 100%;
+}
+
+.navigation-menu .link:hover{
+    color: black;
+}
+
+.navigation-menu button .link{
+    font-size: 1.4rem;
+}
+
+.hamburger {
+    border: 0;
+    height: 40px;
+    width: 40px;
+    padding: 0.5rem;
+    border-radius: 50%;
+    background-color: white;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+    position: absolute;
+    top: 50%;
+    right: 25px;
+    transform: translateY(-50%);
+    display: none;
+}
+
+.hamburger:hover {
+    background-color: transparent;
+    border: 3px solid white;
+    color: white;
+    font-size: 2rem;
+}
+
+.insc-btn {
+    /* margin: 0 15px; */
+    padding: 5px;
+
+}
+
+.navigation-menu .insc{
+    background: transparent;
+    margin-right: 25px;
+    border: 2px solid white;
+}
+
+.insc .link:hover{
+    transform: scale(0.8);
+    transition-duration: 0.5s;
+    color: black;
+    border: none;
+    
+}
+
+.insc:hover{
+    background-color: white;
+    transform: scale(0.8);
+    transition-duration: 0.5s;
+    border: none;
+}
+
+.con .link{
+    color: black;
+}
+
+.con .link:hover{
+    color: white;
+}
+
+.con:hover{
+    background: transparent;
+    border: 2px solid white;
+    transform: scale(0.8);
+    transition-duration: 0.5s;
+}
+
+.navigation-menu button{
+    width: 10rem;
+    height: 3rem;
+    border-radius: 0.8rem;
+    border: none;
+    margin-left: 2.5rem;
+}
+
+@media screen and (max-width: 768px) {
+    .hamburger {
+        display: block;
+    }
+
+    .navigation-menu.expanded .ul {
+        display: flex;
+        position: absolute;
+        top: 70px;
+        right: 0;
+        flex-direction: column;
+        width: 40%;
+        height: auto;
+        background-color: white;
+        /* display: none; */
+    }
+
+    .navigation-menu .ul .link{
+        text-align: center;
+        margin: 0;
+        color: black;
+        width: 100%;
+        padding: 1.5rem 0;
+        border-top: 1px solid rgb(219, 215, 215);
+    }
+
+    .navigation-menu .ul .link:hover {
+        background-color: #eee;
+    }
+    
+    .navigation-menu{
+        margin-right: auto;
+    }
+
+    .navigation-menu .insc{
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .navigation-menu .ul {
+        display: none;
+    }
 }
