--- a/src/styles/slides.css
+++ b/src/styles/slides.css
@@ -1,11 +1,101 @@
+@import url('https://fonts.cdnfonts.com/css/antipasto-pro');
+.text p{
+    color: white;
+    font-size: 3rem;
+}
 .slides {
-
-    width: 100%;
-    height: 95vh;
-    background-image: url('../assets/flou2.png');
-    background-size: cover;
+    /* margin: 0 auto;
+    overflow: hidden;
+    height: 100%; */
+    /* position: relative; */
+    /* background-image:url('../assets/flou2.png');
+    background-size: cover; */
+    /* background-attachment: fixed; */
     font-size: 10rem;
-    
+    font-family: 'Dihjauti', sans-serif;
+}
+
+.slides .gradient{
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 1) 30%, rgb(0, 0, 0, 0.3) 100%);
+    height: 100%;
+}
+
+.text {
+    margin-left: 70px;
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+
 }
 
 
+.slides .gradient .text h1{
+    font-size: 10rem;
+    margin-bottom: 40px;
+    margin-top: 100px;
+    font-weight: 300;
+    color:rgb(255, 255, 255);
+    font-family: 'Antipasto Pro', sans-serif;
+}
+
+.slides .gradient .text h1 span{
+    color: rgb(255, 172, 28);
+    font-size: 10rem;
+    font-weight: 300;
+}
+
+.button{
+    display: flex;
+    flex-direction: row;
+    margin: 100px 0;
+    font-family: 'Dihjauti S', sans-serif;
+    font-size: 3rem;
+    
+    /* justify-content: space-between; */
+}
+
+.but1{
+    background-color: rgb(255, 172, 28);
+    border: none;
+    font-weight: 200;
+    padding: 10px;
+    border-radius: 8px;
+    color:white;
+    margin-right: 50px;
+    /* width: 210px; */
+    height: 50px;
+}
+
+.but2{
+    border: 2px solid rgb(255, 172, 28);
+    font-weight: 200;
+    padding: 10px;
+    border-radius: 8px;
+    background-color:transparent;
+    color: rgb(255, 255, 255);
+    width: 250px;
+    height: 50px;
+}
+
+@media screen and (max-width: 768px){
+    .text{
+        width: 100%;
+        margin-left: 2rem;
+    }
+    .slides .gradient .text h1,
+    .slides .gradient .text h1 span {
+        font-size: 7rem;
+    }
+/* 
+    .button{
+        justify-content: space-between;
+    } */
+
+    .but2{
+        width: 15rem;
+        padding: 0;
+    }
+
+
+}
