--- a/src/styles/ContactForm.css
+++ b/src/styles/ContactForm.css
@@ -83,6 +83,7 @@
     font-size: 1.7rem;
     text-transform: uppercase;
     margin-top: 2rem;
+    cursor: pointer;
 }
 
 .contact-form form .submit:hover{
