--- a/src/styles/slides.css
+++ b/src/styles/slides.css
@@ -43,6 +43,7 @@
     color: rgb(255, 172, 28);
     font-size: 10rem;
     font-weight: 300;
+    font-family: 'Antipasto Pro', sans-serif;
 }
 
 .button{
