--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -9,7 +9,11 @@
     font-size: 3rem;
     flex-wrap: wrap;
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
+    
+}
 
+.sign-in{
+    z-index: 2;
 }
 
 .brand-name {
