--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.cdnfonts.com/css/dihjauti-2');
+@import url('https://fonts.cdnfonts.com/css/poppins');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-size: 65.2%;
-    font-family: 'Dihjauti', sans-serif;
+    font-family: 'Poppins', sans-serif;
     
 }
