--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -26,12 +26,12 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 8rem;
+    height: 7rem;
 }
 
 .signUp form .field.single{
     flex-direction: column;
-    height: 11rem;
+    height: 14rem;
 }
 
 .signUp form .field.single label{
@@ -81,6 +81,7 @@
     width: 100%;
     cursor: pointer;
     background-color: #F5AF00;
+    border-radius: 0.5rem;
 }
 
 .signUp form .submit:hover {
@@ -118,17 +119,38 @@
 
 .signUp form input {
     border: none;
-    border: 3px solid #efefef;
+    border-right: 3px solid #efefef;
+    border-top: 3px solid #efefef;
+    border-bottom: 3px solid #efefef;
     font-size: 1.2rem;
     padding: 0.3rem;
-    width: 100%;
-    border-radius: 0.5rem;
-    text-align: center;
+    width: 95%;
+    border-radius:0 0.5rem 0.5rem 0;
     height: 4rem;
 }
 
-.signUp form input:focus{
+.signUp form .icon-input{
+    display: flex;
+    width: 100%;
+}
+
+.signUp form .icon-input:focus{
     border: 2px solid #F5AF00;
+}
+
+.signUp form .icon-input button{
+    font-size: 1.9rem;
+    padding-left: 0.5rem;
+    border: none;
+    border: none;
+    background-color: white;
+    border-top: 3px solid #efefef;
+    border-bottom: 3px solid #efefef;
+    border-left: 3px solid #efefef;
+    border-radius: 0.5rem 0 0 0.5rem;
+}
+
+.signUp form input:focus{
     outline: none;
 }
 
@@ -145,55 +167,6 @@
 
 .input-wrap{
     width: 48%;
-}
-
-.name-icon{
-    position: absolute;
-    top: 8.5rem;
-        left: 3rem;
-        font-size: 1rem;
-}
-
-.Lname-icon{
-    position: absolute;
-        top: 14.8rem;
-        left: 3rem;
-        font-size: 1rem;
-}
-
-.mail-icon{
-    position: absolute;
-        top: 34.5rem;
-        left: 3rem;
-        font-size: 1rem;
-}
-
-.phone-icon{
-    position: absolute;
-        top: 34.6rem;
-        left: 20rem;
-        font-size: 1rem;
-}
-
-.address-icon{
-    position: absolute;
-        top: 40.5rem;
-        left: 3rem;
-        font-size: 1rem;
-}
-
-.pass-icon{
-    position: absolute;
-        top: 21.5rem;
-        left: 3rem;
-        font-size: 1rem;
-}
-
-.Cpass-icon{
-    position: absolute;
-        top: 27.8rem;
-        left: 3rem;
-        font-size: 1rem;
 }
 
 .connexion-wrapper .signUp form .field.single{
