--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -28,17 +28,17 @@
 .left h1{
     color: white;
     font-size: 4rem;
-    margin: 0;
-    display: flex;
+    font-weight: 500;
 }
 
 .social {
     font-size: 6rem;
+    display: flex;
+    align-items: center;
+    height: 5rem;
 }
 .social span {
     margin: 0.6rem;
-    font-size: 4rem;
-    /* transition: transform .2s; */
 }
 
 .social span:hover{
@@ -54,7 +54,7 @@
 }
 
 .middle h2{
-    /* margin-bottom: 0.2rem; */
+    font-weight: 500;
     font-size: 2rem;
 }
 
@@ -78,8 +78,12 @@
     
 }
 
+.middle li:hover{
+    color: #F5AF00;
+}
+
 .middle p{ 
-    font-size: 1.7rem;
+    font-size: 1.5rem;
 }
 
 .right{
@@ -88,7 +92,7 @@
     /* justify-content: center; */
     align-items: flex-start;
     padding: 0 2rem;
-    margin-top: 0.5rem;
+    margin-top: 1.5rem;
 }
 
 .right h1{ 
@@ -96,6 +100,7 @@
   color: white;
   padding-bottom: 4.5rem;
   margin: 0;
+  font-weight: 500;
 }
 
 form{
@@ -130,8 +135,8 @@ form{
     border: none;
 }
 
-.input form button span{
-    color: black;
+.input form button svg{
+    font-size: 2rem;
 }
 
 .down{
@@ -140,7 +145,7 @@ form{
 }
 
 .down p{
-    font-size: 1.7rem;
+    font-size: 1.2rem;
 }
 @media  screen and (max-width: 940px) {
     
