--- a/src/styles/slides.css
+++ b/src/styles/slides.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.cdnfonts.com/css/antipasto-pro');
 .text p{
     color: white;
-    font-size: 3rem;
+    font-size: 2.5rem;
+    line-height: 2;
 }
 
 .imgslider .slick-slide .img{
@@ -13,15 +14,7 @@
 }
 
 .slides {
-    /* margin: 0 auto;
-    overflow: hidden;
-    height: 100%; */
-    /* position: relative; */
-    /* background-image:url('../assets/flou2.png');
-    background-size: cover; */
-    /* background-attachment: fixed; */
     font-size: 10rem;
-    font-family: 'Dihjauti', sans-serif;
 }
 
 .slides .gradient{
@@ -59,16 +52,13 @@
     display: flex;
     flex-direction: row;
     margin: 100px 0;
-    font-family: 'Dihjauti S', sans-serif;
     font-size: 3rem;
-    
-    /* justify-content: space-between; */
+    font-weight: bold;
 }
 
 .but1{
     background-color: rgb(255, 172, 28);
     border: none;
-    font-weight: 200;
     padding: 10px;
     border-radius: 8px;
     color:white;
@@ -77,15 +67,25 @@
     height: 50px;
 }
 
+.but1:hover{
+    background-color: transparent;
+    border: 2px solid rgb(255, 172, 28);
+}
+
 .but2{
     border: 2px solid rgb(255, 172, 28);
-    font-weight: 200;
     padding: 10px;
     border-radius: 8px;
     background-color:transparent;
     color: rgb(255, 255, 255);
     width: 250px;
     height: 50px;
+}
+
+.but2:hover{
+    background-color: rgb(255, 255, 255);
+    border: none;
+    color: black;
 }
 
 @media screen and (max-width: 768px){
