--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,25 @@
 .App{
     background-color: #efefef;
 }
+
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border: none;
+    border-radius: 0.5rem;
+    background: linear-gradient(98.63deg, #f9a225 0%, #f95f35 100%);
+    transition: all 100ms ease-out;
+}
+
+.button:hover {
+    cursor: pointer;
+    color: var(--orange);
+    background: transparent;
+    border: 2px solid var(--orange);
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
