--- a/src/styles/PostShare.css
+++ b/src/styles/PostShare.css
@@ -35,7 +35,6 @@
 }
 
 .option{
-    padding: 1rem 1.5rem;
     border-radius: 0.5rem;
     display: flex;
     align-items: center;
@@ -44,7 +43,9 @@
 }
 
 .option>svg{
-    font-size: 2rem;
+    font-size: 1.6rem;
+    margin-right: 0.6rem;
+    color: rgb(56 56 56);
 }
 
 .option:hover{
@@ -74,4 +75,10 @@
     max-height: 20rem;
     object-fit: cover;
     border-radius: 0.5rem;
+}
+
+@media screen and (max-width: 900px) {
+    .ps-button{
+        padding: 1rem;
+    }
 }
