--- a/src/styles/Actu-layout.css
+++ b/src/styles/Actu-layout.css
@@ -1,11 +1,35 @@
+.Profile,
 .actu-layout{
     position:relative;
     display: grid;
     grid-template-columns: 25rem auto 23rem;
     gap: 1rem;
-    margin-top: 1rem;
+    margin: 0.5rem;
 }
 
 .drawer-wrapper{
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.ProfileCenter{
+    display: flex;
+        flex-direction: column;
+        gap: 1rem;
+}
+
+@media screen and (max-width: 900px) {
+    .actu-layout{
+        grid-template-columns: 15rem auto 13rem;
+    }
+
+    .logosearch>h3{
+        font-size: 1.2rem;
+    }
+
+    .profileName{
+        font-size: 1.5rem;
+    }
 }
