--- a/src/styles/Followers.css
+++ b/src/styles/Followers.css
@@ -17,7 +17,8 @@
 
 .follower>div {
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
+    width: 70%;
 }
 
 
@@ -27,14 +28,15 @@
     border-radius: 50%;
 }
 
-.name {
+.names {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    font-size: 1.7rem;
 }
 
-.name>span:nth-of-type(1) {
+.names>span:nth-of-type(1) {
     font-weight: bold;
 }
 
@@ -42,6 +44,16 @@
 .fc-button {
     height: 2rem;
     padding: 0 2rem;
-    width: 9rem;
+    width: 30%;
     font-size: 1.2rem;
+}
+
+@media screen and (max-width: 900px){
+    .names{
+        font-size: 1.1rem;
+    }
+
+    .fc-button{
+        font-size: 1rem;
+    }
 }
