--- a/src/styles/LogoSearch.css
+++ b/src/styles/LogoSearch.css
@@ -11,7 +11,8 @@
     display: flex;
     background-color: #ffffff;
     border-radius: 1rem;
-    padding: 1rem;
+    padding: 0.5rem;
+    width: 100%;
 }
 
 .search>input{
@@ -19,6 +20,7 @@
     outline: none;
     background: transparent;
     font-size: 1.2rem;
+    width: 90%;
 }
 
 .search-icon {
