--- a/src/styles/Actu-layout.css
+++ b/src/styles/Actu-layout.css
@@ -33,3 +33,13 @@
         font-size: 1.5rem;
     }
 }
+
+@media screen and (max-width: 768px){
+    .actu-layout{
+        display: block;
+    }
+
+    .drawer-wrapper{
+        display: none;
+    }
+}
