--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -132,6 +132,7 @@
         width: 40%;
         height: auto;
         background-color: white;
+        z-index: 1000;
         /* display: none; */
     }
 
