--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -2,7 +2,7 @@
     border: 1px solid rgb(202, 202, 202);
     display: flex;
     flex-direction: column;
-    margin: 0 1rem 7rem 1rem;
+    /* margin: 0 1rem 7rem 1rem; */
     border-radius: 1rem;
     padding: 1rem;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -19,16 +19,17 @@
 }
 
 .profile-image{
-    height: 5rem;
-    width: 5rem;
-    border-radius: 7px;
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .btn_option{
     position: absolute;
     top: 16.3rem;
     right: 1.3rem;
-    border: 0.2rem solid #F5AF00;
+    border: 0.1rem solid #F5AF00;
     padding: 1rem;
     height: 1rem;
     border-radius: 5rem;
@@ -57,6 +58,7 @@
     color: rgb(80, 76, 76);
     line-height: 1;
     margin-top: 0.5rem;
+    justify-content: space-between;
 }
 
 .add-left{
