--- a/src/styles/slides.css
+++ b/src/styles/slides.css
@@ -97,15 +97,15 @@
     .slides .gradient .text h1 span {
         font-size: 7rem;
     }
-/* 
-    .button{
-        justify-content: space-between;
-    } */
-
     .but2{
         width: 15rem;
         padding: 0;
+        font-size: 1.5rem;
     }
-
-
+    .but1{
+        font-size: 1.5rem;
+    }
+    .text p{
+        font-size: 1.5rem;
+    }
 }
