--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -19,8 +19,8 @@
 }
 
 .profile-image{
-    height: 6rem;
-    width: 6rem;
+    height: 4rem;
+    width: 4rem;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -64,6 +64,12 @@
 .add-left{
     display: flex;
     flex-direction: column;
+    width: 80%;
+}
+
+.add-right{
+    display: flex;
+    justify-content: center;
 }
 
 .address .icon{
