--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -75,7 +75,7 @@
 }
 
 .first-text .one{
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 600;
 }
 
@@ -86,6 +86,10 @@
 .first-text .three {
     /* display: block; */
     margin-left: 10px;
+}
+
+.three>span{
+    font-size: 1.1rem;
 }
 
 .content{
