--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,45 +1,67 @@
 .footer{
     height: auto;
     width: 100%;
-    background-color: black;
     color: white;
-    padding: 0.5rem 10rem;
+    padding: 5rem 0;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     gap: 3rem;
+    background-color: black;
 }
 
-.middle,
 .top{
     display: grid;
-    grid-template-columns: 15rem auto 18rem;
+    width: 158rem;
+    grid-template-columns: 50rem 50rem 50rem;
     font-size: 1.5rem;
-    gap: 10rem;
-    align-items: center;
+    gap: 4rem;
 }
 
 .top h2{
     font-size: 2.5rem;
     letter-spacing: 0.3rem;
-    line-height: 1;
     font-weight: 400;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.top h3{
-    font-size: 2rem;
-    font-weight: 100;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.top>div:nth-of-type(1){
-    line-height: 1;
-}
-
-.top>div:nth-of-type(2){
+.footer-left{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.middle .footer-actu{
+    display: flex;
+    gap: 1rem;
     align-items: center;
+}
+
+.middle{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.middle>h3,
+.right h3{
+    font-size: 2rem;
+}
+
+.middle .footer-orph h3{
+    color: #f5f5f5;
+    font-size: 1.5rem;
+}
+
+.middle p, .right p{
+    font-size: 1.5rem;
+    color: gray;
+}
+
+.footer-actu img{
+    height: 7rem;
+    width: 7rem;
+    object-fit: cover;
+    
 }
 
 .footer-link{
@@ -61,15 +83,9 @@
     gap: 2rem;
 }
 
-.middle .footer-logo svg{
-    font-size: 2rem;
-    align-self: center;
-}
-
 .footer-icon{
-    height: 3rem;
-    width: 3rem;
-    border-radius: 50%;
+    height: 3.5rem;
+    width: 3.5rem;
     background: transparent;
     border: 2px solid white;
     display: flex;
@@ -93,19 +109,21 @@
     color: #00adb5;
 }
 
-.middle svg{
+.top svg,
+.right svg{
     font-size: 2rem;
     align-self: center;
     transition: all 0.3s linear;
 }
 
-.middle svg:hover{
+.top svg:hover,
+.right svg:hover{
     transform: scale(1.2);
 }
-/* 
+
 .footer-text{
-    padding: 0 5rem;
-} */
+    color: gray;
+}
 
 .footer-text h4{
     font-size: 1.9rem;
@@ -114,9 +132,8 @@
 }
 
 .footer-text p{
-    font-size: 1.5rem;
-    font-weight: 100;
-    font-family: system-ui;
+    font-size: 1.3rem;
+    line-height: 2.5rem;
 }
 
 .right{
@@ -125,14 +142,16 @@
     gap: 1rem;
 }
 
+
 .payment{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 1rem;
 }
 
 .paymentMethod{
-    height: 2rem;
-    width: 3rem;
+    height: 2.5rem;
+    width: 6rem;
     object-fit: cover;
 }
 
@@ -142,63 +161,127 @@
 
 .footer-input input,
 .footer-input button{
-    height: 3.5rem;
+    height: 5rem;
     border: none;
     outline: none;
 }
 
 .footer-input input{
-    width: 80%;
-    padding: 0.5rem;
-    background-color: rgb(146, 145, 145);
+    width: 85%;
+    padding-left: 2rem;
+    background: transparent;
     font-size: 1.2rem;
-    color: black;
+    color: white;
+    border: 1px solid #f5f5f5;
+    border-right: none;
 }
 
 .footer-input button{
     background-color: #f5af00;
     color: white;
-    width: 20%;
+    width: 15%;
     display: flex;
     padding: 0.5rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .bottom{
-    padding: 5rem 0 ;
+    border-top: 1px solid gray;
+    padding:2rem 12rem;
+    color: white;
+    background: #000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.footer-left h3,
 .bottom p{
     font-size: 1.5rem;
-    font-weight: 100;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-@media screen and (max-width: 768px) {
+.bottom>div:nth-of-type(2){
+    display: flex;
+    justify-content: space-between;
+    width: 50rem;
+}
 
-    .footer{
-        padding: 0.5rem;
+@media screen and (max-width: 1700px){
+    .top {
+            width: 128rem;
+            grid-template-columns: 40rem 40rem 40rem;
+        }
+
+    .bottom {
+        padding: 2rem 10rem;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    .top{
+        width: 98rem;
+        grid-template-columns: 30rem 30rem 30rem;
     }
 
-    .top,
-    .middle{
+    .bottom{
+        padding: 2rem 11.5rem;
+    }
+}
+
+@media screen and (max-width: 1024px){
+    .top{
+        width: 83rem;
+        grid-template-columns: 25rem 25rem 25rem;
+    }
+
+    .bottom{
+        padding: 2rem 7rem;
+    }
+}
+
+@media screen and (max-width: 912px){
+    .top{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer-left{
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    .top>div:nth-of-type(2){
-        justify-content: space-between;
+    .right>div:nth-of-type(1),
+    .right p,
+    .footer-input,
+    .middle,
+    .footer-text{
+        display: none;
+    }
+
+    .bottom p {
+         font-size: 1.1rem;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .bottom{
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+        gap: 0.5rem;
+    }
+
+    .bottom>div:nth-of-type(2){
         width: 100%;
     }
 
-    .top>div:nth-of-type(3){
-        display: none;
+    .bottom p{
+        font-size: 1.1rem;
     }
 
-    .footer-text,
-    .right{
-        display: none;
+    .footer-link{
+        font-size: 1.2rem;
     }
-
-    
 }
