almost done with home page

--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -107,7 +107,6 @@
 }
 
 .head>label{
-    font-size: 1.2rem;
     display: flex;
     align-items: center;
     width: 17rem;
@@ -115,6 +114,7 @@
     color: black;
 }
 
+.head>label>input,
 .head>label>select{
     padding: 0.3rem;
     background-color:  #efefef;
@@ -127,6 +127,29 @@
     font-size: 1.1rem;
 }
 
+.label-text{
+    width: 30%;
+    font-size: 1.2rem;
+}
+
+.h-button{
+    width: 17rem;
+    font-size: 1.5rem;
+}
+
+@media screen and (max-width: 1280px){
+.content{
+    width: 73%;
+}
+}
+
+@media screen and (max-width: 1024px){
+    .head{
+        display: grid;
+        grid-template-columns: 17rem 17rem 17rem;
+        gap: 1rem;
+    }
+}
 
 @media screen and (max-width: 768px) {
 
@@ -134,6 +157,20 @@
         grid-template-columns: repeat(2, 1fr);
         margin: 10px;
     }
+
+}
+
+@media screen and (max-width: 500px){
+.head>label>input,
+.head>label>select{
+    width: 55%;
+}
+
+.head{
+    display: grid;
+    grid-template-columns: 17rem 17rem;
+    gap: 1rem;
+}
 }
 
 @media screen and (max-width: 920px){
