--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -33,8 +33,9 @@
     text-decoration: none;
     margin: 0 1rem;
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     width: 100%;
+    font-weight: 500;
 }
 
 .navigation-menu .link:hover{
