--- a/src/styles/Actu-layout.css
+++ b/src/styles/Actu-layout.css
@@ -7,8 +7,8 @@
     margin: 0.5rem;
 }
 
+.ProfileSide,
 .drawer-wrapper{
-    /* margin-left: 1rem; */
     display: flex;
     flex-direction: column;
     gap: 1rem;
