almost done with  dashboard

--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -47,7 +47,7 @@
     object-fit: cover;
 }
 
-.side{
+.layout .side{
     width: 25%;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
     border-radius: 0.2rem;
