--- a/src/styles/Dashboard/CardContent.css
+++ b/src/styles/Dashboard/CardContent.css
@@ -47,7 +47,8 @@
 }
 
 /* sideDetail*/
-.detail {
+ 
+.CompactCard .detail {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -55,12 +56,12 @@
     justify-content: space-between;
 }
 
-.detail>span:nth-child(2) {
+ .CompactCard .detail>span:nth-child(2) {
     font-size: 22px;
     font-weight: bold;
 }
 
-.detail>span:nth-child(3) {
+.CompactCard .detail>span:nth-child(3) {
     font-size: 12px;
 }
 
