--- a/src/styles/Dashboard/RightSide.css
+++ b/src/styles/Dashboard/RightSide.css
@@ -5,6 +5,16 @@
     justify-content: space-evenly;
 }
 
+.RightSide .side{
+    background: whitesmoke;
+    border-radius: 0.5rem;
+    height: 28rem;
+    overflow-y: auto;
+}
+
+.RightSide h3{
+    font-size: 1.7rem;
+}
 
 @media screen and (max-width: 1200px) {
     .RightSide {
