--- a/src/styles/Dashboard/SideBar.css
+++ b/src/styles/Dashboard/SideBar.css
@@ -1,10 +1,6 @@
 .Dashboard {
-    /* padding: 0.5rem 3.5rem; */
+    background: linear-gradient(to bottom right, #fff, #feffff);
     color: var(--black);
-    background: linear-gradient(106.37deg,
-            #ffe1bc 29.63%,
-            #ffcfd1 51.55%,
-            #f3c6f1 90.85%);
     height: 100vh;
     display: flex;
     align-items: center;
@@ -19,7 +15,7 @@
     background: var(--glass);
     border-radius: 2rem;
     gap: 16px;
-    grid-template-columns: 20rem auto 29rem;
+    grid-template-columns: 20rem auto;
     overflow: hidden;
 }
 .SideBar{
@@ -106,7 +102,7 @@
 
     @media screen and (max-width: 1200px) {
         .AppGlass {
-            grid-template-columns: 10% 50% auto;
+            grid-template-columns: 10% auto;
             overflow-y: scroll;
         }
     }
@@ -116,3 +112,53 @@
             grid-template-columns: 1fr;
         }
     }
+
+
+/* tablets     */
+@media screen and (max-width: 1200px) {
+  .menu-item>span{
+    display: none;
+  }
+  .logo-dash{
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+    .sidebar {
+        position: fixed;
+        z-index: 9;
+        background: #ffe0e0;
+        width: 55%;
+        padding-right: 1rem;
+        height: 100%;
+    }
+
+    .menuItem>span {
+        display: block;
+    }
+
+    .logo {
+        display: flex;
+    }
+
+    .menu .menuItem:last-child {
+        position: relative;
+        margin-top: 6rem;
+    }
+
+    .bars {
+        display: flex;
+        position: fixed;
+        top: 2rem;
+        left: 60%;
+        background: #ffe0e0;
+        padding: 10px;
+        border-radius: 10px;
+        z-index: 9;
+    }
+
+    .close {
+        left: -60%;
+    }
+}
